refactor: fix architectural errors
